--- a/app/src/main/res/layout/view_offline_download.xml
+++ b/app/src/main/res/layout/view_offline_download.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical" >
 
     <!-- 搜索部分 -->
-    <com.csq.baiduoffline.MySearchView
+    <com.lemon.carmonitor.baiduoffline.MySearchView
         android:id="@+id/svDown"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
