--- a/app/src/main/res/layout/view_offline_countrys.xml
+++ b/app/src/main/res/layout/view_offline_countrys.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:search="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
@@ -23,6 +24,8 @@
     </ExpandableListView>
 
     <ListView
+        android:cacheColorHint="#00000000"
+        android:background="@color/white"
         android:id="@+id/lvSearchResult"
         style="@style/MListView"
         android:layout_width="match_parent"
