--- a/app/src/main/res/layout/view_offline_download.xml
+++ b/app/src/main/res/layout/view_offline_download.xml
@@ -3,6 +3,7 @@
     xmlns:search="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical" >
 
     <!-- 搜索部分 -->
@@ -16,6 +17,8 @@
 
     <!-- 下载列表 & 搜索结果 -->
     <ListView
+        android:cacheColorHint="#00000000"
+        android:background="@color/white"
         android:id="@+id/lvDown"
         style="@style/MListView"
         android:layout_width="match_parent"
